k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yt-download-api
  namespace: default
  labels:
    app: yt-download-api
spec:
  selector:
    app: yt-download-api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
