k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yt-download-api-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: yt-downloader.josecjr.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yt-download-api
                port:
                  number: 8000
